<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="mul_btn">×</string>
    <string name="root_btn">√</string>
    <string name="percent_btn">%</string>
    <string name="div_btn">÷</string>
    <string name="sub_btn">-</string>
    <string name="add_btn">+</string>
    <string name="dot_btn">.</string>
    <string name="result_btn">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>